# tm

./: .gitignore  LICENSE  Makefile  README.md
backend/: .gitignore  CMakeLists.txt
backend/config/: tm
backend/debian/: changelog  control  copyright  dirs  init.d  install
backend/src/: executor.cpp  executor.hpp  fifos.cpp  fifos.hpp  globals.cpp  globals.hpp  helpers.cpp  helpers.hpp  main.cpp  states.cpp  states.hpp  task_manager.cpp  task_manager.hpp
doc/: Build.md  Workr.md
doc/Example/Get some informations/: run.sh  task.json
doc/Example/This is a long task/: run.sh
frontend/: .eslintrc.js  README.md  jsconfig.json  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/public/css/: google_fonts.css
frontend/src/: App.vue  main.js  tools.js
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: FifosList.vue  JobView.vue  StateView.vue  StatesList.vue  TaskView.vue  TasksList.vue
